changes to set log level to info

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,7 +70,7 @@ application:
 logging:
   level:
     root: INFO
-    com.gt.bff: DEBUG
+    com.gt.bff: INFO
     org.springframework.web: INFO
     org.hibernate: WARN
   pattern:
