--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8081
+
+# Enable throwing NoHandlerFoundException when no handler is found
+spring.mvc.throw-exception-if-no-handler-found=true
+
+# Disable static resource handling by the default servlet
+spring.web.resources.add-mappings=false
+
+# Disable default error page to use our custom error handling
+server.error.whitelabel.enabled=false
